--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="frame">
-      <!-- <div class="center">
+      <div class="center">
         <div class="number">
           <div class="one-one"></div>
           <div class="one-two"></div>
@@ -18,7 +18,7 @@
         </div>
         <span class="big">Days</span>
         <span class="small">CSS Challenge</span>
-      </div> -->
+      </div>
     </div>
   </body>
 </html>
