--- a/2/index.html
+++ b/2/index.html
@@ -5,19 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>DAY 1</title>
+    <title>DAY 2</title>
   </head>
   <body>
     <div class="frame">
       <div class="center">
-        <div class="number">
-          <div class="one-one"></div>
-          <div class="one-two"></div>
-          <div class="zero-one"></div>
-          <div class="zero-two"></div>
+        <div class="menu-icon">
+          <div class="line-1 no-animation"></div>
+          <div class="line-2 no-animation"></div>
+          <div class="line-3 no-animation"></div>
         </div>
-        <span class="big">Days</span>
-        <span class="small">CSS Challenge</span>
       </div>
     </div>
   </body>
